# GEMLA

./: .gitignore  README.md  analysis.py
carp_spike/: main.carp
file_linked/: Cargo.toml  README.md
file_linked/src/: error.rs  lib.rs
file_linked/src/constants/: data_format.rs  mod.rs
gemla/: Cargo.toml  build.rs  cli.yml  config.json  nodes.toml
gemla/src/: error.rs  lib.rs  main.rs
gemla/src/bracket/: genetic_node.rs  genetic_state.rs  mod.rs  state.rs  tree.rs
gemla/src/constants/: args.rs
gemla/src/core/: genetic_node.rs  mod.rs
gemla/src/file_data/: mod.rs
gemla/src/file_linked/: mod.rs
gemla/src/tests/: bracket.rs  file_linked.rs  mod.rs  tree.rs
gemla/src/tree/: mod.rs
sbcl_spike/: main.lisp
