[package]
name = "file_linked"
version = "0.1.0"
authors = ["vandomej <jacob.vandome15@gmail.com>"]
edition = "2018"
license-file = "../LICENSE"
description = "Controlling objects linked directly to a file"
homepage = "https://github.com/vandomej/GEMLA/tree/master/file_linked"
repository = "https://github.com/vandomej/GEMLA/tree/master/file_linked"
readme = "README.md"
keywords = ["file", "linked", "serialize", "deserialize", "data", "storage"]
categories = ["filesystem", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"