[package]
name = "file_linked"
version = "0.1.2"
authors = ["vandomej <jacob.vandome15@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Controlling objects linked directly to a file"
homepage = "https://github.com/vandomej/GEMLA/tree/master/file_linked"
repository = "https://github.com/vandomej/GEMLA/tree/master/file_linked"
documentation = "https://docs.rs/file_linked/"
readme = "README.md"
keywords = ["file", "linked", "data", "storage"]
categories = ["filesystem", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
bincode = "1.3.3"