[package]
name = "gemla"
version = "0.1.0"
authors = ["Jacob VanDomelen <Jacob.Vandome15@gmail.com>"]
edition = "2018"
license-file = "../LICENSE"
description = "Using evolutionary computation to generate machine learning algorithms"
homepage = "https://github.com/vandomej/GEMLA"
repository = "https://github.com/vandomej/GEMLA"
readme = "../README.md"
keywords = ["genetic", "evolution", "evolved", "machine", "learning", "algorithm", "neural", "network"]
categories = ["simulation"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
clap = { version = "~2.27.0", features = ["yaml"] }
toml = "0.5.8"
regex = "1"
file_linked = { version = "0.1.0", path = "../file_linked" }