[package]
name = "gemla"
version = "0.1.2"
authors = ["Jacob VanDomelen <Jacob.Vandome15@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Using evolutionary computation to generate machine learning algorithms"
homepage = "https://github.com/vandomej/GEMLA"
repository = "https://github.com/vandomej/GEMLA"
documentation = "https://docs.rs/gemla/"
readme = "../README.md"
keywords = ["genetic", "evolve", "machine", "learning", "algorithm"]
categories = ["simulation"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["serde", "v4"] }
clap = { version = "4.5.2", features = ["derive"] }
toml = "0.8.10"
regex = "1"
file_linked = { version = "0.1.0", path = "../file_linked" }
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8.5"
log = "0.4.21"
env_logger = "0.11.3"
futures = "0.3.30"
smol = "2.0.0"
smol-potat = "1.1.2"
num_cpus = "1.16.0"
easy-parallel = "3.3.1"
fann = "0.1.8"
